# 2Q_Cache

./: CMakeLists.txt  README.md
include/: cache.hpp  cache_2q.hpp  cache_ideal.hpp  ideal_cache.hpp
src/: ideal_main.cpp  main.cpp  main_2q.cpp  main_ideal.cpp
tests/2Q/: run_tests_2q.sh
tests/ideal/: automation.py  generate_tests.py  run_tests_ideal.sh
